# simple_web_mvc_frame

./: .gitignore  CMakeLists.txt  LICENSE  README.md  count_lines.py  main.cpp  note.md
app/: file.cpp  file.h  form.cpp  form.h  index.cpp  index.h  post.cpp  post.h  user.cpp  user.h
config/: server.ini
frame/: server.cpp  server.h
fs/: directory.cpp  directory.h  file.cpp  file.h
reflect/: class_factory.cpp  class_factory.h  class_field.h  class_method.h  class_register.h
socket/: client_socket.cpp  client_socket.h  poller.cpp  poller.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h  socket_handler.cpp  socket_handler.h
static/: test.js
task/: http_task.cpp  http_task.h  task_factory.cpp  task_factory.h
template/file/: index.html
template/index/: hello.html  index.html
template/user/: index.html
thread/: auto_lock.cpp  auto_lock.h  condition.cpp  condition.h  mutex.cpp  mutex.h  task.cpp  task.h  task_dispatcher.cpp  task_dispatcher.h  thread.cpp  thread.h  thread_pool.cpp  thread_pool.h  worker_thread.cpp  worker_thread.h
utility/: ini_file.cpp  ini_file.h  logger.cpp  logger.h  singleton.h  string.cpp  string.h  system.cpp  system.h  value.cpp  value.h
web/: controller.h  file_upload.cpp  file_upload.h  request.cpp  request.h  response.cpp  response.h  server.cpp  server.h
